--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>D&D 5e Character Sheet</title>
     <meta name="author" content="Nils Liebreich">
+    <link rel="icon" href="favicon.png">
 
     <style>
         body {
