Changed print background color

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             margin: 2px;
             padding: 2px;
             border: 2px solid blue;
-            background-color: whitesmoke;
         }
 
         .page {
             border: 2px dashed black;
+            background-color: whitesmoke;
             aspect-ratio: 210 / 297;
             page-break-after: always;
             margin: min(1vh, 1vw);
@@ -39,6 +39,7 @@
 
             .page {
                 margin: 0;
+                background-color: transparent;
             }
         }
     </style>
